--- a/IngenieriaSoftware/nbproject/private/private.properties
+++ b/IngenieriaSoftware/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 compile.on.save=true
-file.reference.mysql-connector-java-3.1.14.zip=C:\\Users\\Marco\\Desktop\\IngenieriaSoftware\\mysql-connector-java-3.1.14.zip
-file.reference.poi-3.13-20150929.jar=C:\\Users\\Marco\\Desktop\\IngenieriaSoftware\\poi-3.13-20150929.jar
-user.properties.file=C:\\Users\\Marco\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+do.depend=false
+do.jar=true
+file.reference.derby.jar=/home/marco/Escritorio/derby.jar
+file.reference.derbyclient.jar=/home/marco/Escritorio/derbyclient.jar
+file.reference.mysql-connector-java-3.1.14.zip=/home/marco/Nimal/IngenieriaSoftware/mysql-connector-java-3.1.14.zip
+file.reference.poi-3.13-20150929.jar=/home/marco/Nimal/IngenieriaSoftware/poi-3.13-20150929.jar
+javac.debug=true
+javadoc.preview=true
+user.properties.file=/home/marco/.netbeans/8.0.2/build.properties
